[package]
name = "zboxmount"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbox = "0.8.8"
structopt = "0.3.5"
fuse_mt = "0.5.0"
rpassword = "4.0.3"
zeroize = "1.1.0"
