[package]
name = "zboxmount"
version = "0.1.0"
authors = ["Vitaly _Vi Shukela <vi0oss@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbox = {version="0.8.8", default-features=false}
structopt = "0.3.5"
fuse_mt = "0.5.0"
rpassword = "4.0.3"
zeroize = "1.1.0"
env_logger = "0.7.1"
time = "0.1.42"
libc = "0.2.66"
log = "0.4.8"
sharded-slab = "0.0.7"
humantime = "1.3.0"

[features]
default = ["storage-file", "storage-mem"]
storage-mem = ["zbox/storage-mem"]
storage-file = ["zbox/storage-file"]
#storage-faulty = ["zbox/storage-faulty "]
storage-sqlite = ["zbox/storage-sqlite"]
storage-redis = ["zbox/storage-redis"]
storage-zbox = ["zbox/storage-zbox"]
#storage-zbox-faulty = ["zbox/storage-zbox-faulty"]
storage-zbox-native = ["zbox/storage-zbox-native"]
storage-zbox-android = ["zbox/storage-zbox-android"]
libsodium-bundled = ["zbox/libsodium-bundled"]
